aumento de tamanho do valor e troco

--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@
                         <button type="submit" class="bg-blue-600 text-white p-2 rounded-md hover:bg-blue-700 h-10">Adicionar</button>
                     </form>
                     <div id="payment-modal-payments-list" class="text-sm space-y-1"></div>
-                    <div class="border-t pt-2 space-y-1 text-right">
-                        <p class="text-gray-600">Valor Pago: <span id="payment-modal-paid-amount" class="font-bold">R$ 0,00</span></p>
-                        <p class="text-gray-600">Troco: <span id="payment-modal-change" class="font-bold">R$ 0,00</span></p>
+                    <div class="border-t pt-4 pb-4 space-y-2 text-right">
+                        <p class="text-gray-600">Valor Pago: <span id="payment-modal-paid-amount" class="font-bold text-xl">R$ 0,00</span></p>
+                        <p class="text-gray-600 text-red-600">Troco: <span id="payment-modal-change" class="font-bold text-xl">R$ 0,00</span></p>
                     </div>
                 </div>
             </div>
