--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
             <form id="login-form" class="mt-8 space-y-6">
                 <div>
                     <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                    <input id="email" name="email" type="email" autocomplete="email" required class="mt-1 block w-full p-3 border border-gray-300 rounded-md shadow-sm" value="cliente@loja.com">
+                    <input id="email" name="email" type="email" autocomplete="email" required class="mt-1 block w-full p-3 border border-gray-300 rounded-md shadow-sm" value="">
                 </div>
                 <div>
                     <label for="password" class="block text-sm font-medium text-gray-700">Senha</label>
-                    <input id="password" name="password" type="password" autocomplete="current-password" required class="mt-1 block w-full p-3 border border-gray-300 rounded-md shadow-sm" value="123456">
+                    <input id="password" name="password" type="password" autocomplete="current-password" required class="mt-1 block w-full p-3 border border-gray-300 rounded-md shadow-sm" value="">
                 </div>
                 <div class="text-sm text-center">
                     <a href="#" id="forgot-password-link" class="font-medium text-indigo-600 hover:text-indigo-500">Esqueceu a sua senha?</a>
