--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
 
     <!-- Sistema Principal (inicialmente oculto) -->
-    <div id="main-app" class="w-full max-w-7xl h-[90vh] flex-col bg-white rounded-xl shadow-2xl overflow-hidden hidden">
+    <div id="main-app" class="w-full h-full flex flex-col bg-white overflow-hidden hidden">
         <header class="bg-gray-800 p-6 flex-shrink-0 flex justify-between items-center">
             <div>
                 <h1 class="text-2xl sm:text-3xl font-bold text-white">Sistema Integrado de Gestão</h1>
